--- a/aplicacao/contest/src/main/resources/templates/organizador/org_ver_trabalhos_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_ver_trabalhos_evento.html
@@ -65,74 +65,94 @@
 												Paper</em>
 										</div>
 
-										<div th:if="${#strings.equals(trabalho.status, 'REPROVADO')}"
-											class="chip red">
-											<i class="fa fa-thumbs-down" aria-hidden="true"></i>
-											Reprovado
-										</div>
-										<div th:if="${#strings.equals(trabalho.status, 'APROVADO')}"
-											class="chip light-blue accent-2">
-											<i class="fa fa-thumbs-up" aria-hidden="true"></i> Aprovado
-										</div>
-										<div th:if="${#strings.equals(trabalho.status, 'MODERACAO')}"
-											class="chip orange lighten-3">
-											<i class="fa fa-thumbs-up" aria-hidden="true"></i> Moderado
+										<div th:if="${trabalho.status != null}">
+											<div class="left chip light-green accent-2"
+												th:if="${revisado}">
+												<i class="fa fa-check-circle" aria-hidden="true"></i>
+												Revisado
 
-											<div>
-												<a href="#modalStatus" data-target="modalLogin"
-													class="btn waves-effect waves-light modal-trigger">Decidir
-													Status</a>
 											</div>
-										</div>
-										<div class="chip light-green accent-2" th:if="${revisado}">
-											<i class="fa fa-check-circle" aria-hidden="true"></i>
-											Revisado
+											<div class=" left chip orange lighten-2"
+												th:unless="${revisado}">
+												<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+												Não revisado
+											</div>
 
-										</div>
-										<div class="chip orange lighten-2" th:unless="${revisado}">
-											<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-											Não revisado
-										</div>
+											<div th:if="${#strings.equals(trabalho.status, 'REPROVADO')}"
+												class="left chip red">
+												<i class="fa fa-thumbs-down" aria-hidden="true"></i>
+												Reprovado
+											</div>
+											<div th:if="${#strings.equals(trabalho.status, 'APROVADO')}"
+												class="left chip light-blue accent-2">
+												<i class="fa fa-thumbs-up" aria-hidden="true"></i> Aprovado
+											</div>
 
+											<div th:if="${#strings.equals(trabalho.status, 'RESSALVAS')}"
+												class="chip orange lighten-3">
+												<i class="fa fa-thumbs-up" aria-hidden="true"></i> Aprovado
+												com Ressalvas
+											</div>
+
+											<div th:if="${#strings.equals(trabalho.status, 'MODERACAO')}">
+												<div class="left chip orange lighten-3">
+													<i class="fa fa-thumbs-up" aria-hidden="true"></i> Moderado
+												</div>
+												<br /> <br />
+
+												<div>
+													<a th:attr="href='#modal' + ${trabalho.id}"
+														class="btn waves-effect waves-light modal-trigger white-text">Decidir
+														Status</a>
+												</div>
+											</div>
+											<br />
+										</div>
 									</div>
 								</div>
-							</div>
+								<div th:id="${'modal'+trabalho.id}" class="modal">
+									<div class="modal-content">
 
+											<p th:text="${resultadoRevisoes[count.index]}"></p>
+
+										<h4>Status</h4>
+										<form class="col s12"
+											th:action="@{/eventoOrganizador/avaliar/}" method="post">
+											<div class="row">
+												<div class="input-field col s12">
+													<input type="hidden" th:value="${trabalho.id}"
+														th:name="idTrabalho" /> <input type="hidden"
+														th:value="${evento.id}" th:name="idEvento" /> <select
+														th:name="funcao" required="required">
+														<option th:value="APROVADO">APROVADO</option>
+														<option th:value="REPROVADO">REPROVADO</option>
+														<option th:value="RESSALVAS">APROVADO COM RESSALVAS</option>
+													</select>
+												</div>
+											</div>
+											<div class="modal-footer">
+
+												<a
+													class=" modal-action modal-close btn waves-effect waves-light red white-text">Cancelar</a>
+
+												<button class="left btn waves-effect waves-light"
+													type="submit" name="action">Aplicar status</button>
+
+											</div>
+										</form>
+
+									</div>
+
+								</div>
+
+							</div>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
 		<div th:unless="${#lists.isEmpty(trabalhos)}"
 			class="row holder center"></div>
-	</div>
-	<div id="modalStatus" class="modal">
-		<div class="modal-content">
-			<h4>Status</h4>
-			<form class="col s12" th:action="@{/usuario/logar}" method="post">
-				<div class="row">
-					<div class="input-field col s12">
-						
-						<select name="funcao" required="required">
-										<option value="APROVADO">APROVADO</option>
-										<option value="REPROVADO">REPROVADO</option>
-										<option value="RESSALVAS">APROVADO COM RESSALVAS</option>
-									</select>
-					</div>
-				</div>
-				<div class="modal-footer">
-
-
-					<a class=" modal-action modal-close btn waves-effect waves-light red">Cancelar</a>
-
-					<button class="left btn waves-effect waves-light" type="submit"	name="action">Aplicar status</button>
-
-				</div>
-			</form>
-
-		</div>
-
 	</div>
 	<div th:include="fragments/footer :: footer"></div>
 	<script type="text/javascript" th:src="@{/js/jPages.min.js}"></script>
