Validação dos campos de email das telas de cadastro de usuário e cadastrar evento.

--- a/aplicacao/contest/src/main/resources/templates/cadastro.html
+++ b/aplicacao/contest/src/main/resources/templates/cadastro.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="input-field">
-              <input type="email" id="email" name="email" th:field="*{email}" required="required"/>
+              <input type="email" id="email" name="email" th:field="*{email}" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"/>
               <label for="email">*Email</label>
             </div>
             
