--- a/aplicacao/contest/src/main/resources/templates/evento/admin_cadastrar.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_cadastrar.html
@@ -10,7 +10,7 @@
     <div class="row">
       <h2 class="col s12">Adicionar Evento</h2>
     </div>
-    <form class="row"  th:action="@{/evento/adicionarEvento}" th:object="${evento}" method="post">
+    <form class="row" id="form" th:action="@{/evento/adicionarEvento}" th:object="${evento}" method="post">
       <input type="hidden" th:field="*{id}" />
 	      <div class="error_area col s12" th:if="${#fields.hasErrors('*')}">
 	        <div class="chip row red left" th:each="err : ${#fields.errors('*')}">
@@ -25,8 +25,8 @@
       
       
         <div class="input-field col m6 s6">
-        	<input id="email" type="text" th:field="${organizador.email}"/>
-       	    <label for="email">Email do Organizador</label>
+        	<input id="email" name="email" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" th:field="${organizador.email}" class="validate"/>
+       	    <label for="email" >Email do Organizador</label>
       	</div>
      
       <div class="input-field col m12 s6">
@@ -35,7 +35,7 @@
       </div>
       
        <div class="input-field col s12">
-        <button type="submit" class="waves-effect waves-light btn white-text">
+        <button type="submit" id="verifica" class="waves-effect waves-light btn white-text" onclick="isEmail();">
           Salvar Evento<i aria-hidden="true" class="fa fa-floppy-o left"></i>
         </button>
       </div>
@@ -43,5 +43,7 @@
     </form>
   </div>
   <div th:include="fragments/footer :: footer"></div>
+  <script type="text/javascript" th:src="@{/js/modernizr.js}"></script>
+
 </body>
 </html>
