--- a/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
@@ -33,15 +33,9 @@
           <div class="card horizontal">
             <div class="card-stacked">
               <div th:include="fragments/evento_timeline :: evento-timeline(${evento})"></div>
-              <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'NAO_TEM_REVISAO'">
+              <div class="card-action">
                   <a th:if="${evento.isPeriodoInicial()}" th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}" class="waves-effect waves-light btn green">Enviar Novo Trabalho</a>
-               	  <a th:if="${evento.isPeriodoRevisao()}" class="btn disabled grey white-text">Fora do Prazo de Envio de Trabalho</a>
-               	  
-               	  <a th:href="@{'/autor/listarTrabalhos/'+ ${evento.id}}" class="waves-effect waves-light btn yellow">Listar Trabalhos</a>
-                </div>
-                <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'TEM_REVISAO'">
-                  <a th:if="${evento.isPeriodoInicial()}" th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}" class="waves-effect waves-light btn green">Enviar Novo Trabalho</a>
-               	  <a th:if="${evento.isPeriodoRevisao()}" class="btn disabled grey white-text">Fora do Prazo de Envio de Trabalho</a>
+               	  <a th:if="${evento.isPeriodoRevisao() or (not evento.isPeriodoInicial())}" class="btn disabled grey white-text">Fora do Prazo de Envio de Trabalho</a>
                	  
                	  <a th:href="@{'/autor/listarTrabalhos/'+ ${evento.id}}" class="waves-effect waves-light btn yellow">Listar Trabalhos</a>
                 </div>
