--- a/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
@@ -67,7 +67,6 @@
                  
               </div>
               
-           	<form th:action="@{/autor/reenviarTrabalho}"  method="POST" enctype="multipart/form-data">
 	              <div class="card-action">
 	                <div class="row">
 	                  <div th:if="${trabalho.evento.isPeriodoInicial()} or ${trabalho.evento.isPeriodoFinal()}" class="file-field input-field col m6 s6">
@@ -95,6 +94,7 @@
 	     
 	     
 	              
+           	<form th:action="@{/autor/reenviarTrabalho}"  method="POST" enctype="multipart/form-data">
 	            <div th:attr="id='reenviar' + ${trabalho.id}" class="modal">
 			        <div class="modal-content">
 			          <h4>Reenviar Trabalho</h4>
@@ -120,11 +120,11 @@
 				<h5 th:text="${trabalho.evento.nome}"></h5>
 				<p>Você está excluindo o trabalho deste evento</p>
 			  </div>
-			  <form th:action="@{/autor/excluirTrabalho}" method="post">
+			  <form th:action="@{/autor/excluirTrabalho/}" method="post">
 				
 				<div class="modal-footer">
 				    <input type="hidden" name="trabalhoId" th:value="${trabalho.id}"/>
-					<input type="hidden" name="eventoId" th:value="${eventoId}"/>
+					<input type="hidden" name="eventoId" th:value="${evento.id}"/>
 					<button type="submit" class="modal-action modal-close waves-effect btn-flat">Confirmar</button><a
 					href="#" class="modal-action modal-close waves-effect btn-flat">Cancelar</a>
 				</div>
