--- a/aplicacao/contest/src/main/resources/templates/fragments/header.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/header.html
@@ -10,10 +10,9 @@
 					<a sec:authorize = "hasRole('USER')" th:href="@{/dashboard}"><img th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px" /></a>
 					<a sec:authorize = "hasRole('ADMIN')" th:href="@{/evento/ativos}"><img th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px" /></a>
 					<ul class="white-text right hide-on-med-and-down">
-						<li>
-							<div sec:authorize = "hasRole('USER')"> <a th:href="@{/dashboard}"> Ir para Dashboard </a> </div>
-							<div sec:authorize = "hasRole('ADMIN')"> <a th:href="@{/evento/ativos}"> Ir para Início </a> </div>
-						</li>
+						<li> <a th:href="@{/dashboard}"> Ir para Dashboard </a> </li>
+						<li sec:authorize = "hasRole('ADMIN')"> <a th:href="@{/evento/ativos}"> Ir para Início </a> </li>
+						
 						<li><a href="#"
 							th:text="${#authentication.getPrincipal().getNome()}"></a></li>
 	
