resolvendo problema das considerações dos revisores para organizador

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -81,7 +81,7 @@
 										required="required" /> <label for="email_rev">E-mail
 										Revisor</label>
 								</div>
-
+								<small>Você pode adicionar mais de um revisor, basta adicionar os emails separados por vírgula. Ex.: "nome@email.com,nome@email2.com,nome@emails3.com"</small>
 								<div class="input-field">
 									<input type="hidden" th:value="${evento.id}" name="eventoId" />
 								</div>
