--- a/aplicacao/contest/src/main/resources/templates/login.html
+++ b/aplicacao/contest/src/main/resources/templates/login.html
@@ -19,13 +19,13 @@
           <p>
             
 			Seja bem vindo ao Sistema de Controle de Eventos de Submissão, acesse o sistema com seu usuário e 
-			senha previamente cadastrado, caso não possua o cadastro, <a href="http://cadastroaluno.intranet/">clique aqui</a> 
+			senha previamente cadastrado, caso não possua o cadastro, <a href="https://cadastroaluno.quixada.ufc.br/">clique aqui</a> 
 			e logo em seguida entre com os dados no formulário ao lado. (OBS: O link so pode ser acessado de dentro da rede do campus) 
           </p>
           <p>
             Tenha um bom evento! Para acessar o sistema de cadastro, você deve está na rede da UFC Campus Quixadá!
           </p>
-          <p>Caso você não seja aluno da Universidade Federal do Ceará e deseja fazer seu cadastro, <a th:href="@{/cadastroForm}">clique aqui</a> e cadastre-se.</p>
+          <p>Caso você não seja aluno/professor da Universidade Federal do Ceará e deseja fazer seu cadastro, <a th:href="@{/cadastroForm}">clique aqui</a> e cadastre-se.</p>
         </div>
         <div class="col s12 m6" >
           <form name="loginForm" th:action="@{/login}" class="valign" method="post">
