--- a/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
@@ -10,8 +10,7 @@
 	        <a th:href="@{/eventoOrganizador/ativos}">Eventos Ativos</a>
 	       	<a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
 
-	       	<a th:href="@{/secao/paginaSecao}">Visualizar Seções</a>
-			<!-- <a th:text="${#authentication.getPrincipal()}"></a> -->
+	       	<a th:if= "${evento != null}" th:href="@{|/secao/${evento.id}/paginaSecao|}">Visualizar Seções</a>
 	       	<a th:if= "${evento != null} and 
 	       	 ${trilha == null} and
 	       	 ${revisores == null} and       	 		       	 		     
