--- a/aplicacao/contest/src/main/resources/templates/secao/cadastroSecao.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/cadastroSecao.html
@@ -85,6 +85,11 @@
 	<div th:include="fragments/footer :: footer"></div>
 	<script type="text/javascript" th:src="@{/js/jPages.min.js}"></script>
 	<script type="text/javascript">
+		
+		$(document).ready(function() {
+		    $('select').material_select();
+		  });
+	
 		//datepicker
 		$('.datepicker').pickadate({
 			selectMonths : true, // Creates a dropdown to control month
