--- a/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
@@ -63,7 +63,7 @@
                 	<p><b>Trilha: </b><span th:text="${trabalho.trilha.nome}"></span></p>
                 	<p><b>SITUAÇÃO DO ARTIGO: </b> 
                 	
-                	<span th:if="${not #lists.isEmpty(trabalho.revisoes)}" th:text="${trabalho.revisoes[0].avaliacao}"></span>
+                	<span th:if="${not #lists.isEmpty(trabalho.revisoes)}">Revisado</span>
                 	<span th:if="${#lists.isEmpty(trabalho.revisoes)}">Não Revisado</span>
                 	</p>
                
@@ -112,9 +112,7 @@
 			          <a href="#" class="modal-action modal-close waves-effect btn-flat">Cancelar</a>
 			        </div>
       			</div>
-	         </form>
-              
-        	  
+	         </form>                      	  
         	</div>
         	
         	      	
