--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -115,10 +115,10 @@
 							<div th:each="pessoaOrganizador : ${evento.getOrganizadores()}"
 								class="black-text text-darken-2">
 								<span th:text="${pessoaOrganizador.getNome()}"></span>
-
+									
 
 								<a th:attr="href='#modalRemoverOrganizador' + ${pessoaOrganizador.id}"
-									class="red-text confirmar modal-trigger">Excluir</a>
+									class="red-text confirmar modal-trigger"><small><b>remover</b></small></a>
 
 								<div th:attr="id='modalRemoverOrganizador' + ${pessoaOrganizador.id}"
 									class="modal">
@@ -127,10 +127,10 @@
 										<h5 th:text="${pessoaOrganizador.getNome()}"></h5>
 										<p>Você está removendo o organizador</p>
 									</div>
-									<form th:action="@{/eventoOrganizador/removerOrganizador}" method="post">
+									<form th:action="@{|/eventoOrganizador/removerOrganizador/${evento.id}|}" method="post">
 
 										<div class="modal-footer">
-											<input type="hidden" name="eventoId" th:value="${evento.id}" />
+											<input type="hidden" name="pessoaId" th:value="${pessoaOrganizador.id}" />
 											<button type="submit" class="modal-action modal-close waves-effect btn-flat">Confirmar</button>
 											<a href="#" class="modal-action modal-close waves-effect btn-flat">Cancelar</a>
 										</div>
@@ -158,7 +158,7 @@
 							<div th:each="pessoaRevisor : ${evento.getRevisores()}"
 								class="black-text text-darken-2">
 								<span th:text="${pessoaRevisor.getNome()}"></span>
-								<a th:attr="href='#modalRemoverRevisor' + ${pessoaRevisor.id}" class="red-text confirmar modal-trigger">excluir</a>
+								<a th:attr="href='#modalRemoverRevisor' + ${pessoaRevisor.id}" class="red-text confirmar modal-trigger"><small><b>remover</b></small></a>
 
 								<div th:attr="id='modalRemoverRevisor' + ${pessoaRevisor.id}"
 									class="modal">
@@ -167,10 +167,10 @@
 										<h5 th:text="${pessoaRevisor.getNome()}"></h5>
 										<p>Você está removendo o revisor</p>
 									</div>
-									<form th:action="@{/eventoOrganizador/evento/trabalho/removerRevisor}"	method="post">
+									<form th:action="@{|/eventoOrganizador/removerRevisor/${evento.id}|}"	method="post">
 
 										<div class="modal-footer">											
-											<input type="hidden" name="eventoId" th:value="${evento.id}"/>
+											<input type="hidden" name="pessoaId" th:value="${pessoaRevisor.id}"/>
 											<button type="submit" class="modal-action modal-close waves-effect btn-flat">Confirmar</button>
 											<a href="#"	class="modal-action modal-close waves-effect btn-flat">Cancelar</a>
 										</div>
