--- a/aplicacao/contest/src/main/resources/templates/coautor/coautor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/coautor/coautor_listar_trabalhos.html
@@ -7,6 +7,7 @@
     <div th:include="fragments/header :: header"></div>
     <div class="container page"><br/>
       <div th:include="fragments/autor_menu_navegacao :: autor_menu_navegacao"></div>
+      <h2 th:text="'Evento:' + ${evento.nome}"></h2>
       
       <div>
 		<div th:if="${trabalhoExcluido}" id="error_area" class="row chip red white-text green" th:text="#{TRABALHO_EXCLUIDO_COM_SUCESSO}">
@@ -50,7 +51,7 @@
         	  
         	  <div class="card-content">
                 <span class="card-title" th:text="'Trabalho: ' + ${trabalho.titulo}"></span> <br/>
-                <span class="card-title" th:text="'Evento: ' + ${trabalho.evento.nome}"></span>
+                
                 
                 <div class="row">
                 <div class="col s4">
@@ -73,7 +74,7 @@
                 </div>
                 </div>
                 
-                 <a th:href= "@{|/coautor/file/${trabalho.id}|}" class="teal-text confirmar modal-trigger">Fazer Download do Trabalho</a>
+                 <a th:href= "@{|/autor/file/${trabalho.id}|}" class="teal-text confirmar modal-trigger">Fazer Download do Trabalho</a>
                  
               </div>       	  
         	</div>
