--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_meus_eventos.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_meus_eventos.html
@@ -51,7 +51,7 @@
                 <div class="card-action">
                 	<a th:if="${evento.isPeriodoRevisao()}" th:href="@{'/revisor/' + ${evento.id} + '/trabalhosRevisao'}" class="waves-effect waves-light btn-large white-text">Ver Trabalhos para revisão</a>
                 	<a th:if="${evento.isPeriodoFinal()}" class="btn disabled grey white-text">Prazo de revisão encerrado</a>
-                    <a th:href="@{'/revisor/evento/' + ${evento.id}}" class="purple-text">Detalhes </a>
+                    <a th:href="@{'/revisor/evento/' + ${evento.id}}+ '/detalhes'" class="purple-text">Detalhes </a>
                 </div>
               </div>
             </div>
